--- a/EX_Rio de Janeiro 2.0_C/rio.html
+++ b/EX_Rio de Janeiro 2.0_C/rio.html
@@ -4,23 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel now Turismo</title>
+    <title>Rio de Janeiro</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="plano-de-fundo">
-        <nav>
 
-            <img src="imagens/Logo-Travel-2.png" class="logo" alt="logo">
+        <video autoplay loop muted plays-inline class="logo">
+            <source src="imagens/rio.mp4" type="video/mp4">
+        </video>
 
+        <nav class="navrio">
+            <img src="imagens/logo.png" class="logo">
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="rio.html">Rio de Janeiro</a></li>
+                    <li><a href="rio.html">Rio de Janeiro</a></li>
                 <li><a href="galeria.html">Galeria</a></li>
             </ul>
         </nav>
-<h1 class="titulo">Visite o: <br><span>Rio de Janeiro</span></h1>
 
+            <div class="conteudo">
+                <h1>Rio de Janeiro</h1>
+                <a href="#">Explore</a>
+            </div>
     </div>
     
 </body>
